# MatchX-HFT

./: CMakeLists.txt  README.md
docs/: architecture.md  readme.md
include/nanotrader/memory/: pool_allocator.hpp  pool_allocator.tpp  ring_buffer.hpp
src/: CMakeLists.txt  benchmark_simple.cpp  main.cpp  main_simple.cpp  main_working.cpp  test_minimal.cpp  test_suite.cpp
src/core/: matching_engine.cpp  order_book.cpp
src/memory/: pool_allocator.cpp
tools/: CMakeLists.txt
